feature(hibernate7): Migrate to hibernate 7 - bump hibernate version to 7.1 - bump spring version to 7 - migrate newInstance reflection call - identify column id generator strategy by hibernate Generator